# suchak

./: .gitignore  README.md  setup.cfg  tests.py
suchak/: __init__.py  atr.py  deque.py  ema.py  fibo.py  jitclass.py  ma.py  macd.py  rma.py  rsi.py  sma.py  supertrend.py  tr.py  util.py  vec.py  window.py  zig_zag_pivots.py
