[metadata]
name = suchak
version = 0.0.3
url = https://github.com/Agnee-Transmissions/suchak
author = Dev Aggarwal
author_email = devxpy@gmail.com

[options]
python_requires = >=3.8.0
install_requires =
    numpy
    numba

packages = find:

[options.extras_require]
dev =
    pytest
    tulipy
    jupyter